--- a/jcla.css
+++ b/jcla.css
@@ -185,6 +185,9 @@ header {
 #nav-spacer{
 	width: 75vw
 }
+#true-link {
+	box-shadow:  0 -1px 0 0 #FFFDF8 inset, 0 -2px 0 0 #333333 inset ;
+}
 #w-all {
 	margin-right: .75em;
 	align-items: center;
@@ -259,6 +262,7 @@ input#genres {
 	flex-direction: column;
 	align-items: center;
 	margin: 1em 0;
+	padding-bottom: 1em;
 }
 #general-cap {
 	position: relative;
@@ -282,10 +286,11 @@ input#genres {
 
 	position: absolute;
 	top: 7em;
+	padding-bottom: 3em;
 }
 .info-box img {
 	max-width: 50vw;
-	margin: 1em;
+	margin: .5em;
 
 	border-radius: 10px;
 }
@@ -299,7 +304,6 @@ input#genres {
 .awards img {
 	max-width: 50%;
 	height: auto;
-	padding: 1em;
 }
 #ldb-list {
 	list-style-type: none;
