--- a/jcla.css
+++ b/jcla.css
@@ -3,13 +3,10 @@
 @import url('https://use.typekit.net/pbo3wok.css');
 	 /* CSS Document */
 
-
-
 *{
 	margin: 0;
 	padding: 0;
 }
-
 body{
 	font-family: "adobe-garamond-pro", 'Times New Roman', Times, serif;
 	font-weight: 500;
@@ -17,9 +14,8 @@ body{
 	color: #333333;
 	background-color: #FFFDF8;
 	text-align: left;
-	min-height: 100vh;
+	height: 100vh;
 	width: 100vw;
-	z-index: 2;
 	clear: both;
     overflow-y: auto;
 	overflow-x: hidden;
@@ -40,18 +36,9 @@ main{
 	-moz-align-items: center;
 	-ms-align-items: center;
 	align-items: center;
-
+	
 	transition: .3s ease-in-out;
 }
-
-#content-box {
-	display: flex;
-	flex-direction: column;
-	width: 100vw;
-	max-height: auto;
-	align-items: center;
-}
-
 div {
 	-moz-flex: 1 0 auto;
 	-webkit-flex: 1 0 auto;
@@ -59,32 +46,16 @@ div {
 	width: 100%;
     height: inherit;
 }
-
-html {
-	min-height: 100vh;
-	margin: 0;
-	padding: 0;
-}
-
 /* TEXT STYLING */
 h1 {
     font-style: normal;
     font-weight: 700;
     font-size: 2rem;
 }
-h2 {
-
-}
-h3 {
-
-}
 p {
     font-style: normal;
     font-weight: 500;
     font-size: 1.25rem;
-}
-small {
-
 }
 a{
     color: #333333;
@@ -92,7 +63,6 @@ a{
 
 	transition: all .3s ease-in;
 }
-  
 a:hover {
     transition: all .3s ease-out;
 	box-shadow:  0 -1px 0 0 #FFFDF8 inset, 0 -2px 0 0 #333333 inset ;
@@ -109,14 +79,14 @@ iframe {
 /* Header */
 header {
 	position: fixed;
-	z-index: 98;
+	z-index: 97;
 }
 #home-button {
     display: flex;
     flex-direction: row;
 	align-items: center;
 	justify-content: center;
-	position: absolute;
+	position: relative;
 	left: 1.75em;
     background-color: #9E9E72;
 	height: auto;
@@ -163,12 +133,19 @@ header {
 #home-last {
     font-size: 1em;
 }
+#menu-buttons {
+	position: fixed;
+	z-index: 96;
+}
 #acw-links {
 	font-size: 1.25rem;
 	font-weight: 600;
 	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: flex-end;
 	width: 100vw;
-	height: 4rem;
+	height: auto;
 	border-bottom: solid;
 	border-width: 1px;
 	border-color: #BDBDBD;
@@ -179,11 +156,9 @@ header {
 	align-items: center;
 	justify-content: center;
 	width: auto;
-	height: auto;
-	margin: .5em;
-}
-#nav-spacer{
-	width: 75vw
+	max-width: 3.5em;
+	height: 3em;
+	margin: 0 .5em;
 }
 #true-link {
 	box-shadow:  0 -1px 0 0 #FFFDF8 inset, 0 -2px 0 0 #333333 inset ;
@@ -201,17 +176,18 @@ header {
 	transition: all .3s ease-out;
 	box-shadow:  0 -1px 0 0 #FFFDF8 inset, 0 -2px 0 0 #333333 inset ;
 }
-input#genres {
+input#genres, input#mobile-menu {
 	display: none;
 }
 #categories {
 	position: absolute;
-	top: 4em;
+	top: 3.75em;
 	right: 0;
 	font-size: 1rem;
 	max-height: 0;
 	opacity: 0;
 	width: auto;
+
 	transition: .3s ease-in-out;
 	pointer-events: none;
 }
@@ -242,7 +218,7 @@ input#genres {
 /* Galleries */
 .carousel-cell {
 	width: 100%; /* full width */
-	height: 30em; /* height of carousel */
+	height: 29em; /* height of carousel */
 	margin-right: 10px;
 }
 .carousel-cell img{
@@ -278,32 +254,40 @@ input#genres {
 }
 
 /* General Pages */
-.info-box {
+.content-box {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 
 	position: absolute;
-	top: 7em;
+	top: 0;
 	padding-bottom: 3em;
 }
-.info-box img {
+#about-box, #info-box {
+	top: 7em;
+}
+#about-box img, #info-box img {
 	max-width: 50vw;
 	margin: .5em;
+	align-items: center;
 
 	border-radius: 10px;
 }
 .awards {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-column-gap: 30px;
+	grid-template-rows: 1fr 1fr;
+	align-content: center;
 	max-width: 50vw;
 }
 .awards img {
-	max-width: 50%;
+	max-width: 100% !important;
 	height: auto;
+	border-radius: 0 !important;
+	align-self: center;
+	justify-self: center;
 }
 #ldb-list {
 	list-style-type: none;
@@ -323,22 +307,26 @@ input#genres {
 	"info-form  info-form";
 }
 .contact-field {
-	width: 75vw;
+	width: 74.5vw;
 	min-height: 2.5em;
 	border: solid;
 	border-color: #333333;
 	border-radius: 10px;
 	border-width: 1px;
 	margin-bottom: 1em;
+	padding-left: .5em;
 }
 textarea {
-	width: 75vw;
+	width: 74.5vw;
+	max-width: 74.5vw;
 	min-height: 6em;
 	border: solid;
 	border-color: #333333;
-	border-radius: 10px;
+	border-radius: 10px 10px 5px 10px;
 	border-width: 1px;
 	margin-bottom: 1em;
+	padding-left: .5em;
+	padding-top: .5em;
 }
 #info-map {
 	width:inherit;
@@ -360,4 +348,169 @@ textarea {
 	border-radius: 10px;
 	padding: 5px 10px;
 	cursor: pointer;
+}
+
+/* Media Queries */
+/* Mobile */
+
+@media (max-width: 812px){
+	/* Header */
+	header {
+		position: absolute;
+		z-index: 90;
+	}
+	#head-box {
+		display: flex;
+		width: 100vw;
+		justify-content: center;
+	}
+	#home-button {
+		left: 0;
+	}
+	/* Footer */
+	#hamburger {
+		position: absolute;
+		top: 0;
+		left: 50%;
+		width: 2em;
+		height: 0.1em;
+		transform: translateX(-50%);
+	}
+	#hamburger::after {
+		content: "";
+		position: absolute;
+		top: 1em;
+		width: 2em;
+		height: 0.15em;
+		background: #333333;
+		box-shadow: 
+		  0 0.5em 0 0 #333333,
+		  0 1em 0 0 #333333;
+		  border-radius: 10px;
+	}
+	.nav-link {
+		display: none;
+	}
+	#acw-links {
+		justify-content: center;
+		position: fixed;
+		bottom: 0px;
+		height: 3em;
+		border-bottom: none;
+		border-top: solid;
+		border-width: 1px;
+		border-color: #BDBDBD;
+		background-color: #FFFDF8;
+		z-index: 99;
+	}
+	#categories {
+		position: absolute;
+		top: -24.16em;
+		bottom: 0%;
+		font-size: 1.5rem;
+		opacity: 1;
+		max-width: 50vw;
+	
+		transition: .3s ease-in-out;
+		pointer-events: all;
+	}
+	#genres:checked ~ #categories {
+		max-height: auto;
+		opacity: 1;
+		pointer-events: all;
+	
+		transition: .3s ease-in-out;
+	}
+	#categories ul {
+		list-style-type: none;
+		padding: .5em 1em;
+		white-space: nowrap;
+		background: #FFFDF8;
+	
+		border-left: solid;
+		border-top: solid;
+		border-bottom: none;
+		border-bottom-left-radius: 0px;
+		border-top-left-radius: 10px;
+		border-color: #BDBDBD;
+		border-width: 1px;
+	}
+	#categories li {
+		margin: .3em 0;
+	}
+	/* General */
+	img {
+		border-radius: 0px !important;
+	}
+	#about-box {
+		padding-bottom: 3em;
+	}
+	#info-box {
+		padding-bottom: 7em;
+	}
+	#about-box img {
+		margin: .5em;
+		max-width: 100vw;
+	}
+	.awards {
+		display: flex;
+		flex-direction: column;
+	}
+	.caption-box {
+		top: 75%;
+	}
+	#general-cap {
+		position: relative;
+		top: 0;
+	}
+	.cap-head {
+		margin-bottom: .5em;
+	}
+	.cap-body {
+		max-width: 90vw;
+	}
+	/* Galleries */
+	.carousel-cell img{
+		display: block;
+		height: auto;
+		min-width: 100vw;
+		max-width: 100%;
+		margin-right: 10px;
+	}
+	#gal-cap {
+		padding-bottom: 5em;
+	}
+	.home-gal {
+		position: relative;
+		top: 6em;
+	}
+	/* Form */
+	.contact-grid {
+		display: flex;
+		flex-direction: column;
+		max-width: 100vw;
+		position: relative;
+		top: 2em;
+	}
+	.contact-field {
+		width: 90vw;
+	}
+	textarea {
+		width: 90vw;
+		max-width: 90vw;
+	}
+	#info-text {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin-bottom: 2em;
+	}
+	#info-map {
+		border-radius: 0px;
+		margin-bottom: 2em;
+	}
+	#info-form {
+		display: flex;
+		justify-content: center;
+	}
 }
