--- a/flickity.css
+++ b/flickity.css
@@ -147,3 +147,12 @@ https://flickity.metafizzy.co
   display: none;
 }
 }
+@media screen and (orientation:landscape)
+	and (max-device-width: 812px) {
+    .flickity-enabled {
+      top: -3em;
+    }
+    .flickity-button {
+      display: initial;
+    }
+  }
