--- a/jcla.css
+++ b/jcla.css
@@ -14,7 +14,7 @@ body{
 	color: #333333;
 	background-color: #FFFDF8;
 	text-align: left;
-	height: 100vh;
+	height: auto;
 	width: 100vw;
 	clear: both;
     overflow-y: auto;
@@ -36,8 +36,6 @@ main{
 	-moz-align-items: center;
 	-ms-align-items: center;
 	align-items: center;
-	
-	transition: .3s ease-in-out;
 }
 div {
 	-moz-flex: 1 0 auto;
@@ -60,11 +58,12 @@ p {
 a{
     color: #333333;
 	text-decoration: none;
-
-	transition: all .3s ease-in;
 }
 a:hover {
-    transition: all .3s ease-out;
+	transition: all .3s ease-out;
+	-moz-transition: all .3s ease-out;
+	-webkit-transition: all .3s ease-out;
+	
 	box-shadow:  0 -1px 0 0 #FFFDF8 inset, 0 -2px 0 0 #333333 inset ;
 }
 img{
@@ -82,7 +81,9 @@ header {
 	z-index: 97;
 }
 #home-button {
-    display: flex;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
     flex-direction: row;
 	align-items: center;
 	justify-content: center;
@@ -94,6 +95,9 @@ header {
 	border-radius: 0 0 10px 10px;
 	padding: 1em;
 }
+#head-box a:hover{
+	box-shadow: none;
+}
 #home-logo{
 	width: inherit;
 	height: inherit;
@@ -104,23 +108,39 @@ header {
 	border: solid;
 	border-color: #FFFDF8;
 	border-width: 5px;
+
 	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
 }
 #jcla-shape::after{
 	content: "";
     background-color: #18468A;
 	position: fixed;
     top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
+	left:50%;
+	
+	transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
+	-ms-transform: translate(-50%,-50%);
+	-moz-transform: translate(-50%,-50%);
+
     text-align:center;
 	width: 1.25rem;
 	height: 1.25rem;
 }
 #home-name {
-    display: flex;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+
     flex-direction: column;
-    align-items: center;
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	align-items: center;
+
 	justify-content: center;
 	text-align: center;
 	width: inherit;
@@ -140,9 +160,17 @@ header {
 #acw-links {
 	font-size: 1.25rem;
 	font-weight: 600;
+	display: -ms-flexbox;
+	display: -webkit-flex;
 	display: flex;
+
 	flex-direction: row;
+
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
 	align-items: center;
+
 	justify-content: flex-end;
 	width: 100vw;
 	height: auto;
@@ -151,9 +179,29 @@ header {
 	border-color: #BDBDBD;
 	background-color: #FFFDF8;
 }
-.nav-link{
+#menu-links {
+	display: -ms-flexbox;
+	display: -webkit-flex;
 	display: flex;
+
+	-webkit-align-items: flex-end;
+	-moz-align-items: flex-end;
+	-ms-align-items: flex-end;
+	align-items: flex-end;
+
+	justify-content: flex-end;
+	justify-self: flex-end;
+}
+.nav-link{
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
 	align-items: center;
+
 	justify-content: center;
 	width: auto;
 	max-width: 3.5em;
@@ -163,17 +211,14 @@ header {
 #true-link {
 	box-shadow:  0 -1px 0 0 #FFFDF8 inset, 0 -2px 0 0 #333333 inset ;
 }
-#w-all {
-	margin-right: .75em;
-	align-items: center;
-}
 #w-link {
 	cursor: pointer;
-
-	transition: all .3s ease-out;
 }
 #w-link:hover {
 	transition: all .3s ease-out;
+	-moz-transition: all .3s ease-out;
+	-webkit-transition: all .3s ease-out;
+
 	box-shadow:  0 -1px 0 0 #FFFDF8 inset, 0 -2px 0 0 #333333 inset ;
 }
 input#genres, input#mobile-menu {
@@ -188,7 +233,6 @@ input#genres, input#mobile-menu {
 	opacity: 0;
 	width: auto;
 
-	transition: .3s ease-in-out;
 	pointer-events: none;
 }
 #genres:checked ~ #categories {
@@ -196,7 +240,9 @@ input#genres, input#mobile-menu {
 	opacity: 1;
 	pointer-events: all;
 
-	transition: .3s ease-in-out;
+	transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-webkit-transition: all .3s ease-in-out;
 }
 #categories ul {
 	list-style-type: none;
@@ -227,16 +273,27 @@ input#genres, input#mobile-menu {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform:translate(-50%,-50%);
+	transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
+	-ms-transform: translate(-50%,-50%);
+	-moz-transform: translate(-50%,-50%);
 
 	border-radius: 10px;
 }
 .caption-box {
 	position: absolute;
 	top: 40em;
+	display: -ms-flexbox;
+	display: -webkit-flex;
 	display: flex;
+
 	flex-direction: column;
+
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
 	align-items: center;
+
 	margin: 1em 0;
 	padding-bottom: 1em;
 }
@@ -255,9 +312,17 @@ input#genres, input#mobile-menu {
 
 /* General Pages */
 .content-box {
+	display: -ms-flexbox;
+	display: -webkit-flex;
 	display: flex;
+
 	flex-direction: column;
+
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
 	align-items: center;
+
 	justify-content: center;
 
 	position: absolute;
@@ -270,15 +335,51 @@ input#genres, input#mobile-menu {
 #about-box img, #info-box img {
 	max-width: 50vw;
 	margin: .5em;
+
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
 	align-items: center;
 
 	border-radius: 10px;
 }
+#pnf-box{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+
+	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%,-50%);
+	-ms-transform: translate(-50%,-50%);
+	-moz-transform: translate(-50%,-50%);
+
+	max-width: 80vw;
+}
+.pnf-message {
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+
+	flex-direction: column;
+
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	align-items: center;
+
+	justify-content: center;
+}
 .awards {
 	display: grid;
+
 	grid-template-columns: 1fr 1fr;
+	
 	grid-column-gap: 30px;
+	-moz-column-gap: 30px;
+	-webkit-column-gap: 30px;
+
 	grid-template-rows: 1fr 1fr;
+
 	align-content: center;
 	max-width: 50vw;
 }
@@ -334,7 +435,13 @@ textarea {
 	max-height: 400px;
 }
 #info-text {
+	display: -ms-flexbox;
+	display: -webkit-flex;
 	display: flex;
+	
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
 	align-items: center;
 }
 #submit-button {
@@ -356,10 +463,12 @@ textarea {
 @media (max-width: 812px){
 	/* Header */
 	header {
-		position: absolute;
-		z-index: 90;
+		position: fixed;
+		z-index: 98;
 	}
 	#head-box {
+		display: -ms-flexbox;
+		display: -webkit-flex;
 		display: flex;
 		width: 100vw;
 		justify-content: center;
@@ -370,77 +479,137 @@ textarea {
 	/* Footer */
 	#hamburger {
 		position: absolute;
-		top: 0;
+		top: 35%;
 		left: 50%;
 		width: 2em;
-		height: 0.1em;
-		transform: translateX(-50%);
-	}
-	#hamburger::after {
-		content: "";
-		position: absolute;
-		top: 1em;
-		width: 2em;
 		height: 0.15em;
+
+		transform: translate(-50%, -50%);
+		-webkit-transform: translate(-50%,-50%);
+		-ms-transform: translate(-50%,-50%);
+		-moz-transform: translate(-50%,-50%);
+
 		background: #333333;
 		box-shadow: 
 		  0 0.5em 0 0 #333333,
 		  0 1em 0 0 #333333;
-		  border-radius: 10px;
+		border-radius: 10px;
+	}
+	#menu-open {
+		min-width: 100vw;
+		min-height: 3em;
+		position: fixed;
+		bottom: 0;
+		background-color: #FFFDF8;
+		z-index: inherit;
 	}
 	.nav-link {
-		display: none;
+		height: auto;
+		opacity: 1;
+		font-size: 2em;
+	}
+	#w-link {
+		margin-top: 1.5em;
+	}
+	#menu-links{
+		height: 0;
+		
+		-webkit-align-items: center;
+		-moz-align-items: center;
+		-ms-align-items: center;
+		align-items: center;
+
+		justify-content: center;
+		flex-direction: column-reverse;
+		margin: 0;
+		opacity: 0;
+		pointer-events: none;
+		
+	}
+	#mobile-menu:checked ~ #menu-links {
+		height: 50vh;
+		margin: 25vh;
+		opacity: 1;
+		pointer-events: all;
 	}
 	#acw-links {
 		justify-content: center;
 		position: fixed;
 		bottom: 0px;
-		height: 3em;
+		height: auto;
+		min-height: 3em;
+		
 		border-bottom: none;
 		border-top: solid;
 		border-width: 1px;
 		border-color: #BDBDBD;
 		background-color: #FFFDF8;
 		z-index: 99;
+
+		overflow-y: scroll;
+	}
+	#w-all {
+		display: -ms-flexbox;
+		display: -webkit-flex;
+		display: flex;
+
+		flex-direction: column;
+		justify-content: center;
+
+		-webkit-align-items: center;
+		-moz-align-items: center;
+		-ms-align-items: center;
+		align-items: center;
 	}
 	#categories {
-		position: absolute;
-		top: -24.16em;
-		bottom: 0%;
+		position: relative;
+		top: 0;
+		right: 0;
+		bottom: 6em;
 		font-size: 1.5rem;
-		opacity: 1;
-		max-width: 50vw;
-	
-		transition: .3s ease-in-out;
-		pointer-events: all;
+		max-height: 0;
+		opacity: 0;
+		display: none;
+		width: auto;
+
+		pointer-events: none;
 	}
+	
 	#genres:checked ~ #categories {
 		max-height: auto;
+		display: inline-block;
 		opacity: 1;
 		pointer-events: all;
-	
-		transition: .3s ease-in-out;
+
+		transition: all .3s ease-in-out;
+		-moz-transition: all .3s ease-in-out;
+		-webkit-transition: all .3s ease-in-out;
 	}
 	#categories ul {
 		list-style-type: none;
-		padding: .5em 1em;
+		padding: 0 0 2em 0;
 		white-space: nowrap;
+		text-align: center;
 		background: #FFFDF8;
 	
-		border-left: solid;
-		border-top: solid;
+		border-left: none;
 		border-bottom: none;
 		border-bottom-left-radius: 0px;
-		border-top-left-radius: 10px;
-		border-color: #BDBDBD;
-		border-width: 1px;
+		border-color: transparent;
+		border-width: 0px;
+	}
+	#categories a {
+		color: #666666;
 	}
 	#categories li {
-		margin: .3em 0;
+		margin: 1em 0;
 	}
 	/* General */
 	img {
 		border-radius: 0px !important;
+	}
+	#home-box {
+		position: fixed;
 	}
 	#about-box {
 		padding-bottom: 3em;
@@ -452,7 +621,12 @@ textarea {
 		margin: .5em;
 		max-width: 100vw;
 	}
+	#single-box {
+		margin-top: 1em;
+	}
 	.awards {
+		display: -ms-flexbox;
+		display: -webkit-flex;
 		display: flex;
 		flex-direction: column;
 	}
@@ -486,6 +660,8 @@ textarea {
 	}
 	/* Form */
 	.contact-grid {
+		display: -ms-flexbox;
+		display: -webkit-flex;
 		display: flex;
 		flex-direction: column;
 		max-width: 100vw;
@@ -500,8 +676,15 @@ textarea {
 		max-width: 90vw;
 	}
 	#info-text {
+		display: -ms-flexbox;
+		display: -webkit-flex;
 		display: flex;
+		
+		-webkit-align-items: center;
+		-moz-align-items: center;
+		-ms-align-items: center;
 		align-items: center;
+
 		justify-content: center;
 		margin-bottom: 2em;
 	}
@@ -510,7 +693,45 @@ textarea {
 		margin-bottom: 2em;
 	}
 	#info-form {
+		display: -ms-flexbox;
+		display: -webkit-flex;
 		display: flex;
 		justify-content: center;
 	}
 }
+@media screen and (orientation:landscape)
+	and (max-device-width: 812px) {
+		#home-name {
+			display: none;
+		}
+		#home-button {
+			position: fixed;
+			left: 3em;
+		}
+		#about-box, #info-box {
+			top: .5em;
+		}
+		.caption-box {
+			top: 15em;
+		}
+		#home-box {
+			position: fixed;
+			padding-bottom: 0;
+		}
+		.home-gal {
+			top: 0;
+		}
+		#categories {
+			top: -.75em;
+		}
+		.carousel-cell {
+			width: 100%; /* full width */
+			height: 50vh; /* height of carousel */
+			margin-right: 10px;
+			margin: 25vh 10px 25vh 0
+		}
+		.carousel-cell img{
+			min-width: 0;
+			max-width: 60%;
+		}
+	} 
