--- a/jcla.css
+++ b/jcla.css
@@ -25,17 +25,18 @@ main{
 	display: -webkit-flex;
 	display: flex;
 
-	-webkit-flex-wrap: wrap;
-	-moz-flex-wrap: wrap;
-	-ms-flex-wrap: wrap;
-	flex-wrap: wrap;
-
-	justify-content: center;
+	justify-content: flex-start;
 	
 	-webkit-align-items: center;
 	-moz-align-items: center;
 	-ms-align-items: center;
 	align-items: center;
+
+	flex-direction: column;
+
+	height: 100vh;
+	padding-top: 7em;
+	margin-bottom: 5em;
 }
 div {
 	-moz-flex: 1 0 auto;
@@ -69,6 +70,7 @@ a:hover {
 img{
 	max-width: 100%;
 	height: auto;
+	border-radius: 10px;
 }
 iframe {
 	border: none;
@@ -260,29 +262,99 @@ input#genres, input#mobile-menu {
 #categories li {
 	margin: .3em 0;
 }
+/* Footer */
+footer {
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	align-items: center;
+
+	justify-content: center;
+
+	position: fixed;
+	bottom: 0;
+	max-height: 20px;
+	width: 100vw;
+	border-top: 1px solid #BDBDBD;
+	background: #FFFDF8;
+	padding: 5px 0;
+
+}
+/* Landscape Deign Build */
+.ldb {
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	align-items: center;
+
+	justify-content: center;
+
+	position: absolute;
+	top: 93%;
+	max-width: 70vw;
+	height: 20em;
+	padding-bottom: 4em;
+}
+.ldb-part {
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	align-items: center;
+
+	justify-content: space-around;
+
+	flex-direction: column;
+
+	text-align: center;
+
+	width: 20vw;
+	height: inherit;
+	margin: 0 1em;
+	padding: .5em;
+	border: 1px solid #BDBDBD;
+	border-radius: 10px;
+	background: #FFFDF8;
+}
 
 /* Galleries */
+.main-carousel {
+	margin-top: -7em;
+}
 .carousel-cell {
 	width: 100%; /* full width */
-	height: 29em; /* height of carousel */
+	height: auto; /* height of carousel */
 	margin-right: 10px;
+	margin-top: 7em;
+	display: flex;
+	
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	align-items: center;
+	
+	justify-content: center;
 }
 .carousel-cell img{
-	height: 100%;
-	max-width: auto;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	-webkit-transform: translate(-50%,-50%);
-	-ms-transform: translate(-50%,-50%);
-	-moz-transform: translate(-50%,-50%);
-
-	border-radius: 10px;
+	height: 65vh;
+	width: auto;
+}
+.carousel-cell a:hover {
+	box-shadow:  none;
 }
 .caption-box {
-	position: absolute;
-	top: 40em;
+	position: relative;
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display: flex;
@@ -295,54 +367,17 @@ input#genres, input#mobile-menu {
 	align-items: center;
 
 	margin: 1em 0;
-	padding-bottom: 1em;
-}
-#general-cap {
-	position: relative;
-	top: 1em;
-}
-.cap-head {
-	text-align: center;
-	margin-bottom: 1em;
-}
-.cap-body {
+
 	max-width: 60vw;
+	height: auto;
 	text-align: justify;
 }
-
-/* General Pages */
-.content-box {
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-
-	flex-direction: column;
-
-	-webkit-align-items: center;
-	-moz-align-items: center;
-	-ms-align-items: center;
-	align-items: center;
-
-	justify-content: center;
-
-	position: absolute;
-	top: 0;
+#gal-cap {
+	margin-top: -4em;
 	padding-bottom: 3em;
 }
-#about-box, #info-box {
-	top: 7em;
-}
-#about-box img, #info-box img {
-	max-width: 50vw;
-	margin: .5em;
-
-	-webkit-align-items: center;
-	-moz-align-items: center;
-	-ms-align-items: center;
-	align-items: center;
-
-	border-radius: 10px;
-}
+/* General Pages */
+/* 404 */
 #pnf-box{
 	position: absolute;
 	top: 50%;
@@ -369,33 +404,30 @@ input#genres, input#mobile-menu {
 
 	justify-content: center;
 }
+/* About */
 .awards {
-	display: grid;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-around;
 
-	grid-template-columns: 1fr 1fr;
-	
-	column-gap: 30px;
-	grid-column-gap: 30px;
-	-moz-column-gap: 30px;
-	-webkit-column-gap: 30px;
-
-	grid-template-rows: 1fr 1fr;
-
-	align-content: center;
-	max-width: 50vw;
+	width: 50vw;
+	max-height: 300px;
 }
 .awards img {
-	max-width: 100% !important;
+	max-width: 20vw;
 	height: auto;
 	border-radius: 0 !important;
-	align-self: center;
-	justify-self: center;
 }
-#ldb-list {
+#schematic {
+	max-width: 50vw;
+}
+#pub-list {
 	list-style-type: none;
 	line-height: 2em;
+	padding-bottom: 5em;
 }
-/* Form */
+/* Contact */
 .contact-grid {
 	max-width: 75vw;
 	height: auto;
@@ -424,7 +456,7 @@ textarea {
 	min-height: 6em;
 	border: solid;
 	border-color: #333333;
-	border-radius: 10px 10px 5px 10px;
+	border-radius: 10px 10px 0px 10px;
 	border-width: 1px;
 	margin-bottom: 1em;
 	padding-left: .5em;
@@ -460,8 +492,8 @@ textarea {
 
 /* Media Queries */
 /* Mobile */
-
-@media (max-width: 812px){
+@media screen and (orientation:portrait)
+and (max-device-width: 812px) {
 	/* Header */
 	header {
 		position: fixed;
@@ -478,6 +510,9 @@ textarea {
 		left: 0;
 	}
 	/* Footer */
+	footer {
+		display: none;
+	}
 	#hamburger {
 		position: absolute;
 		top: 35%;
@@ -575,7 +610,6 @@ textarea {
 
 		pointer-events: none;
 	}
-	
 	#genres:checked ~ #categories {
 		max-height: auto;
 		display: inline-block;
@@ -606,58 +640,47 @@ textarea {
 		margin: 1em 0;
 	}
 	/* General */
-	img {
-		border-radius: 0px !important;
+	.caption-box {
+		max-width: 85vw;
 	}
-	#home-box {
-		position: fixed;
-	}
-	#about-box {
-		padding-bottom: 3em;
-	}
-	#info-box {
-		padding-bottom: 7em;
-	}
-	#about-box img {
-		margin: .5em;
-		max-width: 100vw;
-	}
-	#single-box {
-		margin-top: 1em;
+	#ldb-head {
+		font-size: 1.8rem;
 	}
 	.awards {
-		display: -ms-flexbox;
-		display: -webkit-flex;
-		display: flex;
+		width: 85vw;
+	}
+	.awards img {
+		max-width: 50vw;
+	}
+	#schematic {
+		max-width: 100vw;
+	}
+	/* Landscape Deign Build */
+	.ldb {
 		flex-direction: column;
-	}
-	.caption-box {
-		top: 75%;
-	}
-	#general-cap {
+
 		position: relative;
-		top: 0;
-	}
-	.cap-head {
-		margin-bottom: .5em;
-	}
-	.cap-body {
-		max-width: 90vw;
-	}
-	/* Galleries */
-	.carousel-cell img{
-		display: block;
+		top: -50%;
+		max-width: 70vw;
 		height: auto;
-		min-width: 100vw;
-		max-width: 100%;
-		margin-right: 10px;
-	}
-	#gal-cap {
 		padding-bottom: 5em;
 	}
-	.home-gal {
-		position: relative;
-		top: 6em;
+	.ldb-part {
+		width: inherit;
+		height: inherit;
+		margin: 1em 0;
+	}
+	/* Galleries */
+	.carousel-cell {
+		margin-top: 10em;
+	}
+	.carousel-cell img {
+		max-height: 25vh;
+		width: auto;
+	}
+	#gal-cap {
+		margin-top: -25em;
+		padding-bottom: 5em;
 	}
 	/* Form */
 	.contact-grid {
@@ -668,6 +691,7 @@ textarea {
 		max-width: 100vw;
 		position: relative;
 		top: 2em;
+		padding-bottom: 5em;
 	}
 	.contact-field {
 		width: 90vw;
@@ -675,6 +699,7 @@ textarea {
 	textarea {
 		width: 90vw;
 		max-width: 90vw;
+		border-radius: 10px;
 	}
 	#info-text {
 		display: -ms-flexbox;
@@ -702,6 +727,9 @@ textarea {
 }
 @media screen and (orientation:landscape)
 	and (max-device-width: 812px) {
+		main {
+			padding-top: 3em;
+		}
 		#home-name {
 			display: none;
 		}
@@ -709,30 +737,244 @@ textarea {
 			position: fixed;
 			left: 3em;
 		}
-		#about-box, #info-box {
-			top: .5em;
+		#hamburger {
+			display: none;
 		}
+		#acw-links {
+			display: none;
+		}
+		footer {
+			display: none;
+		}
+		/* General */
 		.caption-box {
-			top: 15em;
+			max-width: 85vw;
 		}
-		#home-box {
-			position: fixed;
-			padding-bottom: 0;
+		#ldb-head {
+			font-size: 1.8rem;
 		}
-		.home-gal {
-			top: 0;
+		.awards {
+			width: 85vw;
+		}
+		.awards img {
+			max-width: 50vw;
+		}
+		#schematic {
+			max-width: 100vw;
+		}
+		#schematic {
+			max-width: 80vw;
+			margin-top: 15em;
+		}
+		/* Landscape Deign Build */
+		.ldb {
+			flex-direction: initial;
+
+			position: relative;
+			top: -20%;
+			max-width: 70vw;
+			height: 22em;
+			padding-bottom: 5em;
+		}
+		.ldb-part {
+			justify-content: flex-start;
+			width: 33%;
+			height: inherit;
+			margin: 0 .5em;
 		}
 		#categories {
 			top: -.75em;
 		}
+		.main-carousel {
+			margin-top: 1em;
+		}
 		.carousel-cell {
 			width: 100%; /* full width */
-			height: 50vh; /* height of carousel */
-			margin-right: 10px;
-			margin: 25vh 10px 25vh 0
+			height: auto;
+			margin: 10px;
 		}
 		.carousel-cell img{
-			min-width: 0;
-			max-width: 60%;
+			width: auto;
+			min-width: initial;
+			height: 80vh;
 		}
-	} 
+		#gal-cap {
+			margin-top: -5em;
+			padding-bottom: 5em;
+		}
+		/* Form */
+		.contact-grid {
+			display: -ms-flexbox;
+			display: -webkit-flex;
+			display: flex;
+			flex-direction: column;
+			max-width: 100vw;
+			position: relative;
+			top: 2em;
+			padding-bottom: 5em;
+		}
+		.contact-field {
+			width: 90vw;
+		}
+		textarea {
+			width: 90vw;
+			max-width: 90vw;
+			border-radius: 10px;
+		}
+		#info-text {
+			display: -ms-flexbox;
+			display: -webkit-flex;
+			display: flex;
+			
+			-webkit-align-items: center;
+			-moz-align-items: center;
+			-ms-align-items: center;
+			align-items: center;
+
+			justify-content: center;
+			margin-bottom: 2em;
+		}
+		#info-map {
+			border-radius: 0px;
+			margin-bottom: 2em;
+		}
+		#info-form {
+			display: -ms-flexbox;
+			display: -webkit-flex;
+			display: flex;
+			justify-content: center;
+		}
+	}
+
+
+/* Flickity */
+	.flickity-enabled {
+	position: relative;
+  }
+  .flickity-enabled:focus { outline: none; }
+  .flickity-viewport {
+	overflow: hidden;
+	position: relative;
+	height: 100%;
+  }
+  .flickity-slider {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+  }
+  /* draggable */
+  .flickity-enabled.is-draggable {
+	-webkit-tap-highlight-color: transparent;
+			tap-highlight-color: transparent;
+	-webkit-user-select: none;
+	   -moz-user-select: none;
+		-ms-user-select: none;
+			user-select: none;
+  }
+  .flickity-enabled.is-draggable .flickity-viewport {
+	cursor: move;
+	cursor: -webkit-grab;
+	cursor: grab;
+  }
+  .flickity-enabled.is-draggable .flickity-viewport.is-pointer-down {
+	cursor: -webkit-grabbing;
+	cursor: grabbing;
+  }
+  /* ---- flickity-button ---- */
+  .flickity-button {
+	position: absolute;
+	background: transparent;
+	border: none;
+	color: #333333;
+  }
+  .flickity-button:hover {
+	cursor: pointer;
+  }
+  .flickity-button:focus {
+	outline: none;
+	box-shadow: 0 0 0 5px #19F;
+  }
+  .flickity-button:active {
+	opacity: 0.6;
+  }
+  .flickity-button:disabled {
+	opacity: 0.3;
+	cursor: auto;
+	/* prevent disabled button from capturing pointer up event. #716 */
+	pointer-events: none;
+  }
+  .flickity-button-icon {
+	fill: currentColor;
+  }
+  /* ---- previous/next buttons ---- */
+  .flickity-prev-next-button {
+	top: 40%;
+	width: 44px;
+	height: 44px;
+	border-radius: 50%;
+	/* vertically center */
+	transform: translateY(-40%);
+  }
+  .flickity-prev-next-button.previous { left: 10px; }
+  .flickity-prev-next-button.next { right: 10px; }
+  /* right to left */
+  .flickity-rtl .flickity-prev-next-button.previous {
+	left: auto;
+	right: 10px;
+  }
+  .flickity-rtl .flickity-prev-next-button.next {
+	right: auto;
+	left: 10px;
+  }
+  .flickity-prev-next-button .flickity-button-icon {
+	position: absolute;
+	left: 20%;
+	top: 20%;
+	width: 60%;
+	height: 60%;
+  }
+  /* ---- page dots ---- */
+  .flickity-page-dots {
+	position: relative;
+	width: 100%;
+	bottom: -25px;
+	padding: 0;
+	margin: 0;
+	list-style: none;
+	text-align: center;
+	line-height: 1;
+  }
+  .flickity-rtl .flickity-page-dots { direction: rtl; }
+  .flickity-page-dots .dot {
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	margin: 0 8px;
+	background: #9E9E72;
+	border-radius: 50%;
+	cursor: pointer;
+  }
+  .flickity-page-dots .dot.is-selected {
+	background: #18468A;
+  
+  }
+  
+  /* Media Queries */
+  /* Mobile */
+  @media (max-width: 812px){
+  .flickity-enabled {
+	top: -1.5em;
+  }
+  .flickity-page-dots, .flickity-button {
+	display: none;
+  }
+  }
+  @media screen and (orientation:landscape)
+	  and (max-device-width: 812px) {
+	  .flickity-enabled {
+		top: -4em;
+	  }
+	  .flickity-button {
+		display: initial;
+	  }
+	}
