ltd and no-cap fixe

--- a/jcla.css
+++ b/jcla.css
@@ -326,7 +326,7 @@ footer {
 
 	text-align: center;
 
-	width: 20vw;
+	max-width: 20vw;
 	height: inherit;
 	margin: 0 1em;
 	padding: .5em;
@@ -384,6 +384,10 @@ footer {
 #gal-cap {
 	margin-top: -4em;
 	padding-bottom: 3em;
+}
+#no-cap {
+	position: fixed;
+	width: 100vw;
 }
 /* General Pages */
 /* 404 */
