--- a/jcla.css
+++ b/jcla.css
@@ -111,6 +111,10 @@ header {
 	width: inherit;
 	height: inherit;
 }
+#org-logo {
+	max-width: 75px;
+	margin: -10px;
+}
 #jcla-shape {
     height: 1.75rem;
 	width: 1.75rem;
