--- a/jcla.css
+++ b/jcla.css
@@ -307,6 +307,7 @@ footer {
 	align-items: center;
 
 	justify-content: center;
+	text-align: center;
 
 	position: absolute;
 	top: 93%;
@@ -321,11 +322,9 @@ footer {
 
 	align-items: center;
 
-	justify-content: space-around;
+	justify-content: flex-start;
 
 	flex-direction: column;
-
-	text-align: center;
 
 	width: 30%;
 	height: inherit;
