--- a/jcla.css
+++ b/jcla.css
@@ -435,7 +435,7 @@ footer {
 	height: auto;
 	border-radius: 0 !important;
 }
-#schematic {
+.about-img {
 	max-width: 50vw;
 }
 #pub-list {
@@ -664,7 +664,7 @@ and (max-device-width: 812px) {
 	.awards img {
 		max-width: 50vw;
 	}
-	#schematic {
+	.about-img {
 		max-width: 100vw;
 	}
 	/* About */
@@ -768,7 +768,7 @@ and (max-device-width: 812px) {
 		.awards img {
 			max-width: 50vw;
 		}
-		#schematic {
+		.about-img {
 			max-width: 100vw;
 		}
 		#schematic {
