--- a/jcla.css
+++ b/jcla.css
@@ -67,6 +67,9 @@ a:hover {
 	
 	box-shadow:  0 -1px 0 0 #FFFDF8 inset, 0 -2px 0 0 #333333 inset ;
 }
+#no-hover:hover {
+	box-shadow: none;
+}
 img{
 	max-width: 100%;
 	height: auto;
